fixed scrolling and navbar links on mobile
scroll was covering part of the section it scrolled to, fixed the
offset. navbar now closes when clicking links on mobile.

--- a/css/master.css
+++ b/css/master.css
@@ -26,6 +26,7 @@
   left: 0;
   right: 0;
   padding-top: 65px;
+  padding-bottom: 15px;
 }
 
 h2 {
@@ -97,6 +98,12 @@ h2 {
     padding-top: 15px;
   }
 
+}
+
+@media (max-width: 767px) {
+  .navbar-collapse {
+    text-align: center !important;
+  }
 }
 
 @media (min-width: 562px) {
